k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - pathType: Prefix
        path: /frontend
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-service
            port:
              number: 8080
